test/spec_vectors/simd_int_to_int_extend/fail/module_16.wat
(module (func $i16x8.extend_low_i8x16_u-arg-empty (result v128) (i16x8.extend_low_i8x16_u)))